kubernetes/llm/components/llama-cpp/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: llm-server-svc
  namespace: llm
  labels:
    app: llm-server
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: api
      protocol: TCP
      port: 11434
      targetPort: api
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: llm-server
---
kind: Service
apiVersion: v1
metadata:
  name: llm-server-lb
  namespace: llm
  annotations:
    metallb.io/ip-allocated-from-pool: metallb-pool
    metallb.universe.tf/loadBalancerIPs: 10.101.10.246
spec:
  externalTrafficPolicy: Local
  ipFamilies:
    - IPv4
  ports:
    - name: api
      protocol: TCP
      port: 11434
      targetPort: api
      nodePort: 30334
  internalTrafficPolicy: Cluster
  allocateLoadBalancerNodePorts: true
  type: LoadBalancer
  loadBalancerClass: metallb.io/metallb-class
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: llm-server
